--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -76,7 +76,7 @@
       </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEdit"/>
+      <widget class="QLineEdit" name="ListData"/>
      </item>
      <item row="1" column="0">
       <widget class="QLabel" name="label">
